--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -41,7 +41,7 @@ jobs:
           # Start backend in the background (&)
           npm start & 
           # Wait until the server is actually listening on port 5050
-          npx wait-on http://localhost:5050
+          npx wait-on tcp:5050
 
       # 5. Run the Cypress Tests
       - name: Run Cypress E2E
