Refactor: implemented env variables

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -55,3 +55,5 @@ jobs:
           
           # Use Chrome browser
           browser: chrome
+        env:
+          VITE_API_BASE_URL: http://localhost:5050
